# pybind11_example

./: .gitignore  CMakeLists.txt  main.cpp  setup.py  setup_blender.py
DynamicLibrary/: CMakeLists.txt
DynamicLibrary/include/: TypeName.hpp
DynamicLibrary/include/DynamicLibrary/: DynamicLibrary.hpp
DynamicLibrary/src/: DynamicLibrary.cpp  DynamicLibrary_pb11.cpp
tests/: test_dynalib_py.py
